Skip to content

FLAC demux invalid dereference

The attached file crashes VLC:

../../modules/demux/xiph_metadata.c:77:37: runtime error: signed integer overflow: 2147483647 + 4 cannot be represented in type 'int'
ASAN:DEADLYSIGNAL
=================================================================
==13434==ERROR: AddressSanitizer: SEGV on unknown address 0x613080045b8f (pc 0x7f59decdf0ee bp 0x7f59e0b5dde0 sp 0x7f59e0b5dd50 T4)
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f59decdf0ed in U32_AT ../../include/vlc_common.h:715
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f59decdfea8 in ParseFlacPicture ../../modules/demux/xiph_metadata.c:80
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f59decdeb9f in ParsePicture ../../modules/demux/flac.c:664
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f59decddb8c in ReadMeta ../../modules/demux/flac.c:582
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f59decd7075 in Open ../../modules/demux/flac.c:150
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f59f984e1c4 in generic_start ../../src/modules/modules.c:349
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f59f984d237 in module_load ../../src/modules/modules.c:183
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f59f984da2d in vlc_module_load ../../src/modules/modules.c:275
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f59f984e315 in module_need ../../src/modules/modules.c:364
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f59f98d3271 in demux_NewAdvanced ../../src/input/demux.c:259
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7f59f98d3b33 in input_DemuxNew ../../src/input/demux.c:361
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f59f992ee49 in InputSourceNew ../../src/input/input.c:2288
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7f59f99214ad in Init ../../src/input/input.c:1293
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7f59f9917be7 in Preparse ../../src/input/input.c:512
    [#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7f59fb2e7463 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x7463)
    [#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7f59fae269de in __clone (/lib/x86_64-linux-gnu/libc.so.6+0xe89de)

AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV ../../include/vlc_common.h:715 in U32_AT
Thread T4 created by T3 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f59fc56df59 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.3+0x30f59)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f59f9a43608 in vlc_clone_attr ../../src/posix/thread.c:482
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f59f9a437ea in vlc_clone ../../src/posix/thread.c:494
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f59f9913e64 in input_Start ../../src/input/input.c:176
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f59f987af17 in Preparse ../../src/playlist/preparser.c:249
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f59f987bdd9 in Thread ../../src/playlist/preparser.c:363
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f59fb2e7463 in start_thread (/lib/x86_64-linux-gnu/libpthread.so.0+0x7463)

Thread T3 created by T0 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f59fc56df59 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.3+0x30f59)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f59f9a43608 in vlc_clone_attr ../../src/posix/thread.c:482
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f59f9a439da in vlc_clone_detach ../../src/posix/thread.c:544
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f59f9879ac0 in playlist_preparser_Push ../../src/playlist/preparser.c:118
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f59f9819f2d in libvlc_MetadataRequest ../../src/libvlc.c:631
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f59f9886ca6 in GoAndPreparse ../../src/playlist/item.c:818
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f59f9883bec in playlist_AddInput ../../src/playlist/item.c:511
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f59f9883a6c in playlist_AddExt ../../src/playlist/item.c:474
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f59f9863e0b in intf_InsertItem ../../src/interface/interface.c:164
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f59f9819cd9 in GetFilenames ../../src/libvlc.c:604
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7f59f98193a8 in libvlc_InternalInit ../../src/libvlc.c:484
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f59fc27a3e3 in libvlc_new ../../lib/core.c:59
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x56203b74b43d in main ../../bin/vlc.c:228
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7f59fad5e2b0 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x202b0)

==13434==ABORTING
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information