xiph: rewrite ParseFlacPicture() w/o integer overflows (fixes #17592)